--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -557,9 +557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "I want to get orange and banana\n"
+     ]
+    }
+   ],
    "source": [
     "def fruiterer(fruit1, fruit2) :\n",
     "    print('I want to get', fruit1, 'and', fruit2)\n",
@@ -569,9 +577,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "I want to get :\n- orange\n- banana\n- melon\n- ananas\n"
+     ]
+    }
+   ],
    "source": [
     "def fruiterer(*fruit) :\n",
     "    print('I want to get :')\n",
@@ -583,15 +599,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lions are Carnivores\nBears are Omnivores\nDeers are Herbivores\nHuman are Nomnivores\n"
+     ]
+    }
+   ],
    "source": [
     "def animals(**kwargs):\n",
     "    for key, value in kwargs.items():\n",
     "        print(value, \"are\", key)\n",
     " \n",
     "animals(Carnivores=\"Lions\", Omnivores=\"Bears\", Herbivores=\"Deers\", Nomnivores=\"Human\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Here are the names of brothers :\ntom\nsue\ntim\n"
+     ]
+    }
+   ],
+   "source": [
+    "def brothers(bro1, bro2, bro3):\n",
+    "    print('Here are the names of brothers :')\n",
+    "    print(bro1, bro2, bro3, sep='\\n')\n",
+    "\n",
+    "family = ['tom', 'sue', 'tim']\n",
+    "brothers(*family)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fred belongs to Generation X\nMarry belongs to Generation Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gene(x, y):  # defined by positional args\n",
+    "    print(x, \"belongs to Generation X\")\n",
+    "    print(y, \"belongs to Generation Y\")\n",
+    " \n",
+    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
+    "gene(**dict_gene)  # we call the function by a single argument(variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fred belongs to Generation X\nMarry belongs to Generation Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gene(x, y):  # defined by positional args\n",
+    "    print(x, \"belongs to Generation X\")\n",
+    "    print(y, \"belongs to Generation Y\")\n",
+    " \n",
+    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
+    "gene(**dict_gene)  # we call the function by a single argument(variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fred belongs to Generation X\nMarry belongs to Generation Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gene(x='Solomon', y='David'):  # defined by kwargs (default values assigned to x and y)\n",
+    "    print(x, \"belongs to Generation X\")\n",
+    "    print(y, \"belongs to Generation Y\")\n",
+    " \n",
+    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
+    "gene(**dict_gene) "
    ]
   },
   {
