--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -708,6 +708,351 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Triangle Hypotenuse\n",
+    "def my_function(a, b):\n",
+    "    hypotenuse = (a**2 + b**2)**0.5\n",
+    "    return(hypotenuse)\n",
+    "print(my_function(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rectagle Area\n",
+    "def my_function(a, b):\n",
+    "    area = a * b\n",
+    "    return(area)\n",
+    "print(my_function(3, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Richard\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longer(a, b):\n",
+    "    if len(a) >= len(b):\n",
+    "        return(a)\n",
+    "    else:\n",
+    "        return(b)\n",
+    "\n",
+    "print(longer('Richard', 'John'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(): \n",
+    "    x = 10 # fix me!\n",
+    "    x += 5 \n",
+    "    print(x) \n",
+    "my_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hellohellohello\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo_word = ((lambda x: 'hello'*x)(3))\n",
+    "print(echo_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1\n",
+    "\n",
+    "def counter():\n",
+    "    global count\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "    \n",
+    "counter() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'count' referenced before assignment",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-b36deac55cce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-13-b36deac55cce>\u001b[0m in \u001b[0;36mcounter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'count' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1\n",
+    "\n",
+    "def counter():\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "    \n",
+    "counter() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'count' referenced before assignment",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-647fc70739cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# just empty line\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-11-647fc70739cd>\u001b[0m in \u001b[0;36mcounter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m  \u001b[1;31m# we're trying to change its value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'count' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1\n",
+    "\n",
+    "def print_global():\n",
+    "    print(count)\n",
+    " \n",
+    "print_global()\n",
+    " \n",
+    "def counter():\n",
+    "    print(count)\n",
+    "    count += 1  # we're trying to change its value\n",
+    " \n",
+    "print()  # just empty line\n",
+    "counter() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n2\n3\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1\n",
+    "\n",
+    "def counter():\n",
+    "    global count  # we've changed its scope\n",
+    "    print(count)  # it's global anymore\n",
+    "    count += 1\n",
+    " \n",
+    "counter() \n",
+    "counter()\n",
+    "counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc1():\n",
+    "  x = \"hi\"\n",
+    "  def myfunc2():\n",
+    "    nonlocal x\n",
+    "    x = \"hello\"\n",
+    "  myfunc2() \n",
+    "  return x\n",
+    "\n",
+    "print(myfunc1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc1():\n",
+    "  x = \"hi\"\n",
+    "  def myfunc2():\n",
+    "    #nonlocal x\n",
+    "    x = \"hello\"\n",
+    "  myfunc2() \n",
+    "  return x\n",
+    "\n",
+    "print(myfunc1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "My name is Richard\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'My name is Richard'\n",
+    "def my_function_1(): \n",
+    "    x = 'My name is John'\n",
+    "    \n",
+    "print(x)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "I love London!\n"
+     ]
+    }
+   ],
+   "source": [
+    "city = \"I love Paris!\"\n",
+    "\n",
+    "def my_function(): \n",
+    "    city = \"I love London!\"\n",
+    "    print(city) \n",
+    "    \n",
+    "my_function()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "inner: later\nouter: later\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outer():\n",
+    "    x = \"previous\"\n",
+    "    \n",
+    "    def inner():\n",
+    "        nonlocal x\n",
+    "        x = \"later\"\n",
+    "        print(\"inner:\", x)\n",
+    "    \n",
+    "    inner()\n",
+    "    print(\"outer:\", x)\n",
+    "outer()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
