--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1053,6 +1053,407 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'map'>\n[1, 4, 9, 16, 25]\n[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "iterable = [1, 2, 3, 4, 5]\n",
+    "map(lambda x:x**2, iterable)\n",
+    "result = map(lambda x:x**2, iterable)\n",
+    "print(type(result))  # it's a map type\n",
+    "\n",
+    "print(list(result))  # we've converted it to list type to print\n",
+    "\n",
+    "print(list(map(lambda x:x**2, iterable)))  # you can print directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(n):   # at least two additional lines of code\n",
+    "    return n**2  \n",
+    "  \n",
+    "iterable = [1, 2, 3, 4, 5]\n",
+    "result = map(square, iterable) \n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['one', 'six', 'ten', 'two']\n"
+     ]
+    }
+   ],
+   "source": [
+    "letter1 = ['o', 's', 't', 't']\n",
+    "letter2 = ['n', 'i', 'e', 'w']\n",
+    "letter3 = ['e', 'x', 'n', 'o']\n",
+    "numbers = map(lambda x, y, z: x+y+z, letter1, letter2, letter3)\n",
+    "\n",
+    "print(list(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'filter'>\nEven numbers are : [0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_ten = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
+    "  \n",
+    "even = filter(lambda x:x%2==0, first_ten) \n",
+    "print(type(even))  # it's 'filter' type, \n",
+    "                   # in order to print the result,\n",
+    "                   # we'd better convert it into the list type\n",
+    "\n",
+    "print('Even numbers are :', list(even))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Vowels are : ['a', 'e', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowel_list = ['a', 'e', 'i', 'o', 'u']\n",
+    "first_ten = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "  \n",
+    "vowels = filter(lambda x: True if x in vowel_list else False, first_ten) \n",
+    "\n",
+    "print('Vowels are :', list(vowels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "result = list(filter(lambda x : True if x >= 6 else False, number_list)) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4\n8\n16\n"
+     ]
+    }
+   ],
+   "source": [
+    "def modular_function(n):\n",
+    "    return lambda x: x ** n\n",
+    "    \n",
+    "power_of_2 = modular_function(2)  # first sub-function derived from def\n",
+    "power_of_3 = modular_function(3)  # second sub-function derived from def\n",
+    "power_of_4 = modular_function(4)  # third sub-function derived from def\n",
+    "\n",
+    "print(power_of_2(2))  # 2 to the power of 2\n",
+    "print(power_of_3(2))  # 2 to the power of 3\n",
+    "print(power_of_4(2))  # 2 to the power of 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "alex alex \nlara lara lara \nlinda linda linda linda \n"
+     ]
+    }
+   ],
+   "source": [
+    "def repeater(n):\n",
+    "    return lambda x: x * n\n",
+    "    \n",
+    "repeat_2_times = repeater(2)  # repeats 2 times\n",
+    "repeat_3_times = repeater(3)  # repeats 3 times\n",
+    "repeat_4_times = repeater(4)  # repeats 4 times\n",
+    "\n",
+    "print(repeat_2_times('alex '))\n",
+    "print(repeat_3_times('lara '))\n",
+    "print(repeat_4_times('linda '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "def modular_function(n):\n",
+    "    return lambda x: x ** n\n",
+    "\n",
+    "power_of_3 = modular_function(3)\n",
+    "print(power_of_3(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = lambda x, y: (x+y)/2\n",
+    "print(mean(8, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiply = lambda x: x * 4\n",
+    "add = lambda x, y: x + y\n",
+    "print(add(multiply(10), 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 8, 27, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_list = [1, 2, 3, 4]\n",
+    "result = map(lambda x:x**3, number_list)\n",
+    "print(list(result)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12] \n",
+    "divisible_list = filter(lambda x:x%3==0, number_list) \n",
+    "print(list(divisible_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_list=[1, 2, 3, 4, 5]\n",
+    "result= list(map(lambda x: x**2, number_list))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_list=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "result= list(filter(lambda x : True if x%2 != 0 else False, number_list))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[['S', 'W', 'A', 'Y'], 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
+    "result_1 = ((lambda x : x[2])(list_1))\n",
+    "result_2 = len(result_1)\n",
+    "print([result_1, result_2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['S', 'W', 'A', 'Y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
+    "#result_1 = ((lambda x : max(x, key=len(x)))(list_1))\n",
+    "#result_2 = len(result_1)\n",
+    "print(max(list_1, key=len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(['S', 'W', 'A', 'Y'], 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
+    "result_1 = ((lambda x : max(x, key=len) )(list_1))\n",
+    "result_2 = len(result_1)\n",
+    "result_3 = (result_1, result_2)\n",
+    "print(result_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "([2, 3, 5, 1], 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [[2, 3, 5, 1], [0, 2], [1]]\n",
+    "result_1 = ((lambda x : max(x, key=len) )(list_1))\n",
+    "result_2 = len(result_1)\n",
+    "result_3 = (result_1, result_2)\n",
+    "print(result_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
