--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1454,6 +1454,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "def parrot_trouble(talking, hour):\n",
+    "    if talking == True:\n",
+    "        if hour < 6 or hour > 21:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
+    "print(parrot_trouble(True, 5))\n",
+    "print(parrot_trouble(True, 8))\n",
+    "print(parrot_trouble(False, 22))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
