--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1481,6 +1481,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(x):\n",
+    "    res = 0\n",
+    "    for i in range(x):\n",
+    "        res += i\n",
+    "    return res\n",
+    "print(func(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n\n0\n1\n\n1\n2\n\n3\n3\n\n6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(x):\n",
+    "    res = 0\n",
+    "    for i in range(x):\n",
+    "        res += i\n",
+    "        print(i)\n",
+    "        print()\n",
+    "        print(res)    \n",
+    "func(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "96.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "celsius = int(input())\n",
+    "def conv(c):\n",
+    "    fahr = 9/5 * c + 32\n",
+    "    return fahr\n",
+    "print(conv(celsius))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
