Negative Meaning, Missing Char

--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1548,6 +1548,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "file1.txt\nfile2.txt\nfile3.txt\nfile4.txt\nfile5.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading File\n",
+    "import os\n",
+    "filepath = \"WorkingFolder/\"\n",
+    "path = os.listdir(filepath)\n",
+    "for content in path:\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "file1.txt : 2 changes\nfile2.txt : 2 changes\nfile3.txt : 2 changes\nfile4.txt : 2 changes\nfile5.txt : 2 changes\nTotally 5 files changed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "filepath = \"WorkingFolder/\"\n",
+    "path = os.listdir(filepath)\n",
+    "current = \"xxxx\"\n",
+    "new = \"sing\"\n",
+    "total = 0\n",
+    "for content in path:\n",
+    "    counter = 0\n",
+    "    with open(filepath + content, \"r\", encoding=\"utf-8\") as file:\n",
+    "        result = file.read()\n",
+    "        counter = result.count(current)\n",
+    "    result = result.replace(current, new)\n",
+    "    with open(filepath + content, \"w\", encoding=\"utf-8\") as newFile:\n",
+    "        newFile.write(result)\n",
+    "    if counter:\n",
+    "        print(content, \":\", counter, \"changes\")\n",
+    "        total += 1\n",
+    "print(\"Totally\", total, \"files changed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "not sugar\nnot x\nnot bad\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment - 3 (Negative Meaning)\n",
+    "def not_string(word):    \n",
+    "        if word.startswith(\"not\"):\n",
+    "            return word\n",
+    "        else:\n",
+    "            return \"not \" + word\n",
+    "print(not_string('sugar'))\n",
+    "print(not_string('x'))\n",
+    "print(not_string('not bad'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "pecil\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment - 4 (Missing Char)\n",
+    "def missing_char(word, n):\n",
+    "    return word.replace(word[n], '')\n",
+    "print(missing_char(\"pencil\", 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1800 is not a leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Leap Year\n",
+    "year = int(input(\"Enter a year : \"))\n",
+    "if (year % 400 == 0) or (not year % 100 == 0 and year % 4 == 0):\n",
+    "    print(f\"{year} is a leap year\")\n",
+    "else :\n",
+    "    print(f\"{year} is not a leap year\") \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
