--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1672,6 +1672,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Ann', 'Tom', 3, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Intersection List Without \"Set\"\n",
+    "list_1 = [\"Ann\", \"Kevin\", \"Tom\", 3, 5, 9]\n",
+    "list_2 = [\"John\", \"Tom\", 3, 6, 9, \"Ann\"]\n",
+    "list_3 = []\n",
+    "for i in list_1:\n",
+    "    for ii in list_2:\n",
+    "        if i == ii:\n",
+    "            list_3.append(i)        \n",
+    "print(list_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Peecil\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace Letter W2 With W1\n",
+    "print((lambda x : x.replace(x[2], x[1]))(\"Pencil\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "785\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check input value like as numeric\n",
+    "def num_value():\n",
+    "    x = input(\"Enter a numeric value: \")\n",
+    "    while True:\n",
+    "        if x.isdigit():\n",
+    "            return x\n",
+    "            break\n",
+    "        else:\n",
+    "            x = input(\"It is not valid number. Please a numeric value: \")\n",
+    "\n",
+    "print(num_value())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Palindrome Alfanumeric\n",
+    "def palindrome(x):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-55-00ea39a06540>, line 5)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-55-00ea39a06540>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    return i\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "alf_num = input(\"Enter a sentence: \")\n",
+    "variable = list(alf_num)\n",
+    "for i in variable:\n",
+    "    if i == ' ':\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "#for i in variable:\n",
+    "    #variable.strip(\"\")\n",
+    "\n",
+    "\n",
+    "#print(variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
