--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1774,8 +1774,7 @@
     "if variable[::1] == variable[::-1]:\n",
     "    print(\"The sentence is polidrome\")\n",
     "else:\n",
-    "    print(\"The sentence is not polidrome\")\n",
-    "\n"
+    "    print(\"The sentence is not polidrome\")"
    ]
   },
   {
@@ -1803,10 +1802,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-dd3c9e1753a5>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-dd3c9e1753a5>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    func_1 = lambda X : return x\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_1 = lambda X : return x\n",
+    "print(func_1(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Assignment - 007/10 (Sudoku Displayer)\n",
+    "sudoku = [\n",
+    "    [0, 0, 0, 0, 6, 4, 0, 0, 0],\n",
+    "    [7, 0, 0, 0, 0, 0, 3, 9, 0],\n",
+    "    [8, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 5, 0, 2, 0, 6, 0],\n",
+    "    [0, 8, 0, 4, 0, 0, 0, 0, 0],\n",
+    "    [3, 5, 0, 6, 0, 0, 0, 7, 0],\n",
+    "    [0, 0, 2, 0, 0, 0, 1, 0, 3],\n",
+    "    [0, 0, 1, 0, 5, 9, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 7, 0, 0]\n",
+    "]"
+   ]
   }
  ]
 }
