--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1838,6 +1838,63 @@
     "    [0, 0, 0, 0, 0, 0, 7, 0, 0]\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ylaruswac\na\nba\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment - 5 (Front-Back Char)\n",
+    "def front_back(word):\n",
+    "    a = word[0]\n",
+    "    b = word[-1]\n",
+    "    c = word[1:-1]\n",
+    "    if b == a:\n",
+    "        return word\n",
+    "    else:\n",
+    "        return b+c+a\n",
+    "print(front_back('clarusway'))\n",
+    "print(front_back('a'))\n",
+    "print(front_back('ab'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n-9\n-100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment - 6 (Find Minimum)\n",
+    "def my_min(*x):\n",
+    "    return min(x)\n",
+    "print(my_min(5,6,7))\n",
+    "print(my_min(3,8,-9,0,12,1.2))\n",
+    "print(my_min(-100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
