--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1821,9 +1821,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 0 0 | 0 6 4 | 0 0 0\n7 0 0 | 0 0 0 | 3 9 0\n8 0 0 | 0 0 0 | 0 0 0\n0 0 0 | 5 0 2 | 0 6 0\n0 8 0 | 4 0 0 | 0 0 0\n3 5 0 | 6 0 0 | 0 7 0\n0 0 2 | 0 0 0 | 1 0 3\n0 0 1 | 0 5 9 | 0 0 0\n0 0 0 | 0 0 0 | 7 0 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Assignment - 007/10 (Sudoku Displayer)\n",
     "sudoku = [\n",
@@ -1836,7 +1844,19 @@
     "    [0, 0, 2, 0, 0, 0, 1, 0, 3],\n",
     "    [0, 0, 1, 0, 5, 9, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 7, 0, 0]\n",
-    "]"
+    "]\n",
+    "count1 = 0\n",
+    "count2 = 0\n",
+    "for i in sudoku:\n",
+    "    count2 = 0\n",
+    "    for j in i:\n",
+    "        if count2 == 2 or count2 == 5:\n",
+    "            print(j,\"|\", end=\" \")\n",
+    "        elif count2 == 8:\n",
+    "            print(j, end=\"\\n\")\n",
+    "        else:\n",
+    "            print(j, end=\" \")\n",
+    "        count2 += 1\n"
    ]
   },
   {
@@ -1887,6 +1907,53 @@
     "print(my_min(5,6,7))\n",
     "print(my_min(3,8,-9,0,12,1.2))\n",
     "print(my_min(-100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "- - - - - - - - - - - - - - - - \n0  0  0  |  0  6  4  |  0  0  0\n7  0  0  |  0  0  0  |  3  9  0\n8  0  0  |  0  0  0  |  0  0  0\n- - - - - - - - - - - - - - - - \n0  0  0  |  5  0  2  |  0  6  0\n0  8  0  |  4  0  0  |  0  0  0\n3  5  0  |  6  0  0  |  0  7  0\n- - - - - - - - - - - - - - - - \n0  0  2  |  0  0  0  |  1  0  3\n0  0  1  |  0  5  9  |  0  0  0\n0  0  0  |  0  0  0  |  7  0  0\n- - - - - - - - - - - - - - - - "
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment - 007/10 (Sudoku Displayer)\n",
+    "sudoku = [\n",
+    "    [0, 0, 0, 0, 6, 4, 0, 0, 0],\n",
+    "    [7, 0, 0, 0, 0, 0, 3, 9, 0],\n",
+    "    [8, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 5, 0, 2, 0, 6, 0],\n",
+    "    [0, 8, 0, 4, 0, 0, 0, 0, 0],\n",
+    "    [3, 5, 0, 6, 0, 0, 0, 7, 0],\n",
+    "    [0, 0, 2, 0, 0, 0, 1, 0, 3],\n",
+    "    [0, 0, 1, 0, 5, 9, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 7, 0, 0]\n",
+    "]\n",
+    "count1 = 0\n",
+    "for i in sudoku:\n",
+    "    if count1 == 0 or count1 == 3 or count1 == 6:\n",
+    "        for x in range(16):\n",
+    "            print(\"-\", end=\" \")\n",
+    "        print(end=\"\\n\")\n",
+    "    count2 = 0\n",
+    "    for j in i:\n",
+    "        if count2 == 2 or count2 == 5:\n",
+    "            print(j,\" |\", end=\"  \")\n",
+    "        elif count2 == 8:\n",
+    "            print(j, end=\"\\n\")\n",
+    "        else:\n",
+    "            print(j, end=\"  \")\n",
+    "        count2 += 1\n",
+    "    count1 +=1\n",
+    "    if count1 == 9:\n",
+    "        for x in range(16):\n",
+    "            print(\"-\", end=\" \")\n"
    ]
   },
   {
