--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1958,6 +1958,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "There is not such a file  or path is incorrect\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  with open(\"my_file.txt\", \"r\", encoding=\"utf-8\") as file:\n",
+    "      print(file.read())\n",
+    "except:\n",
+    "  print(\"There is not such a file  or path is incorrect\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "There is not such a file  or path is incorrect\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  with open(\"my_file.txt\", \"r\", encoding=\"utf-8\") as file:\n",
+    "      print(file.read())\n",
+    "except FileNotFoundError:\n",
+    "  print(\"There is not such a file  or path is incorrect\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
