--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.9.0"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -2064,6 +2064,211 @@
     "print('It is time for an error message :(')\n",
     "print(a + b)  # it won't be printed \n",
     "print(\"Sorry, but I won't be printed\") # it won't be printed because error raised before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "x = [([1], [2, 3], (4, 5, 6))]\n",
+    "a = []\n",
+    "for i in x:\n",
+    "    for j in i:\n",
+    "        for z in j:\n",
+    "            a.append(z)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "x = [([1], [2, 3], (4, 5, 6))]\n",
+    "[z for i in x for j in i for z in j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "x = [([1], [2, 3], (4, 5, 6))]\n",
+    "{z for i in x for j in i for z in j}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<generator object <genexpr> at 0x000001732E6F9DD0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3, 10]\n",
+    "a = (x**2 for x in my_list)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n4\n9\n100\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3, 10]\n",
+    "a = (x**2 for x in my_list)\n",
+    "print(next(a)) # next function iterated from generator object\n",
+    "print(next(a))\n",
+    "print(next(a))\n",
+    "print(next(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Google, Yahoo, Spotfy vs. Interview Question\n",
+    "p = \"([{()}])\"\n",
+    "while \"()\"in p or \"[]\" in p or \"{}\" in p:\n",
+    "    p = p.replace(\"()\", \"\").replace(\"[]\", \"\").replace(\"{}\", \"\")\n",
+    "print(p==\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "i[:0] : \ni[0:] : ()\n + () + () = ['()()']\ni[:1] : (\ni[1:] : )\n( + () + ) = ['()()', '(())']\nlast iterate: ['()()', '(())']\ni[:0] : \ni[0:] : ()()\n + () + ()() = ['()()()']\ni[:1] : (\ni[1:] : )()\n( + () + )() = ['()()()', '(())()']\ni[:2] : ()\ni[2:] : ()\n() + () + () = ['()()()', '(())()', '()()()']\ni[:3] : ()(\ni[3:] : )\n()( + () + ) = ['()()()', '(())()', '()()()', '()(())']\ni[:0] : \ni[0:] : (())\n + () + (()) = ['()()()', '(())()', '()()()', '()(())', '()(())']\ni[:1] : (\ni[1:] : ())\n( + () + ()) = ['()()()', '(())()', '()()()', '()(())', '()(())', '(()())']\ni[:2] : ((\ni[2:] : ))\n(( + () + )) = ['()()()', '(())()', '()()()', '()(())', '()(())', '(()())', '((()))']\ni[:3] : (()\ni[3:] : )\n(() + () + ) = ['()()()', '(())()', '()()()', '()(())', '()(())', '(()())', '((()))', '(()())']\nlast iterate: ['()()()', '(())()', '()()()', '()(())', '()(())', '(()())', '((()))', '(()())']\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['()()()', '(())()', '(()())', '()(())', '((()))']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "# Parenthesis\n",
+    "n = 3\n",
+    "comb = ['()']\n",
+    "c = 1\n",
+    "while c < n:\n",
+    "    temp = []\n",
+    "    for i in comb:\n",
+    "        for j in range(len(i)):\n",
+    "            temp.append(i[:j] + '()' + i[j:])\n",
+    "            print(f\"i[:{j}] :\", i[:j])\n",
+    "            print(f\"i[{j}:] :\", i[j:])\n",
+    "            print(i[:j], \"+ () +\", i[j:], \"=\",temp)\n",
+    "    print(\"last iterate:\", temp)\n",
+    "    # use the set function when n = 3\n",
+    "    comb = list(set(temp))\n",
+    "    c += 1\n",
+    "comb if n!=0 else [\"\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['()()()', '(())()', '(()())', '()(())', '((()))']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "comb = ['()']\n",
+    "c = 1\n",
+    "while c < n:\n",
+    "    temp = []\n",
+    "    for i in comb:\n",
+    "        for j in range(len(i)):\n",
+    "            temp.append(i[:j] + '()' + i[j:])\n",
+    "    # use the set function when n = 3\n",
+    "    comb = list(set(temp))\n",
+    "    c += 1\n",
+    "comb if n!=0 else [\"\"]"
    ]
   },
   {
