--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -10,13 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "name": "python390jvsc74a57bd043a9cd95aa030499ef934e4da31e07dde54f3fc3a1fd0cc4aeef7f16459ee2ac",
+   "display_name": "Python 3.9.0 64-bit"
   }
  },
  "nbformat": 4,
@@ -552,7 +551,7 @@
     "parrot(voltage=1000000, action='VOOOOOM')             # 2 keyword arguments\n",
     "parrot(action='VOOOOOM', voltage=1000000)             # 2 keyword arguments \n",
     "parrot('a million', 'bereft of life', 'jump')         # 3 positional arguments\n",
-    "parrot('a thousand', state='pushing up the daisies')  # 1 positional, 1 keyword\n"
+    "parrot('a thousand', state='pushing up the daisies')  # 1 positional, 1 keyword"
    ]
   },
   {
@@ -570,9 +569,8 @@
    ],
    "source": [
     "def fruiterer(fruit1, fruit2) :\n",
-    "    print('I want to get', fruit1, 'and', fruit2)\n",
-    "        \n",
-    "fruiterer('orange', 'banana')\n"
+    "    print('I want to get', fruit1, 'and', fruit2)        \n",
+    "fruiterer('orange', 'banana')"
    ]
   },
   {
