--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -590,9 +590,8 @@
     "def fruiterer(*fruit) :\n",
     "    print('I want to get :')\n",
     "    for i in fruit :\n",
-    "        print('-', i)\n",
-    "        \n",
-    "fruiterer('orange', 'banana', 'melon', 'ananas')\n"
+    "        print('-', i)        \n",
+    "fruiterer('orange', 'banana', 'melon', 'ananas')"
    ]
   },
   {
