--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -631,9 +631,8 @@
     "def brothers(bro1, bro2, bro3):\n",
     "    print('Here are the names of brothers :')\n",
     "    print(bro1, bro2, bro3, sep='\\n')\n",
-    "\n",
     "family = ['tom', 'sue', 'tim']\n",
-    "brothers(*family)\n"
+    "brothers(*family)"
    ]
   },
   {
@@ -652,8 +651,7 @@
    "source": [
     "def gene(x, y):  # defined by positional args\n",
     "    print(x, \"belongs to Generation X\")\n",
-    "    print(y, \"belongs to Generation Y\")\n",
-    " \n",
+    "    print(y, \"belongs to Generation Y\") \n",
     "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
     "gene(**dict_gene)  # we call the function by a single argument(variable)"
    ]
@@ -674,8 +672,7 @@
    "source": [
     "def gene(x, y):  # defined by positional args\n",
     "    print(x, \"belongs to Generation X\")\n",
-    "    print(y, \"belongs to Generation Y\")\n",
-    " \n",
+    "    print(y, \"belongs to Generation Y\") \n",
     "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
     "gene(**dict_gene)  # we call the function by a single argument(variable)"
    ]
@@ -696,8 +693,7 @@
    "source": [
     "def gene(x='Solomon', y='David'):  # defined by kwargs (default values assigned to x and y)\n",
     "    print(x, \"belongs to Generation X\")\n",
-    "    print(y, \"belongs to Generation Y\")\n",
-    " \n",
+    "    print(y, \"belongs to Generation Y\") \n",
     "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
     "gene(**dict_gene) "
    ]
