Global Local Variable

--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -816,13 +816,11 @@
    ],
    "source": [
     "count = 1\n",
-    "\n",
     "def counter():\n",
     "    global count\n",
     "    print(count)\n",
-    "    count += 1\n",
-    "    \n",
-    "counter() \n"
+    "    count += 1    \n",
+    "counter() "
    ]
   },
   {
@@ -845,11 +843,9 @@
    ],
    "source": [
     "count = 1\n",
-    "\n",
     "def counter():\n",
     "    print(count)\n",
-    "    count += 1\n",
-    "    \n",
+    "    count += 1    \n",
     "counter() "
    ]
   },
