--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -974,15 +974,13 @@
    "source": [
     "x = 'My name is Richard'\n",
     "def my_function_1(): \n",
-    "    x = 'My name is John'\n",
-    "    \n",
-    "print(x)\n",
-    "  "
+    "    x = 'My name is John'    \n",
+    "print(x) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -995,12 +993,10 @@
    ],
    "source": [
     "city = \"I love Paris!\"\n",
-    "\n",
     "def my_function(): \n",
     "    city = \"I love London!\"\n",
-    "    print(city) \n",
-    "    \n",
-    "my_function()\n"
+    "    print(city)    \n",
+    "my_function()"
    ]
   },
   {
@@ -1018,13 +1014,11 @@
    ],
    "source": [
     "def outer():\n",
-    "    x = \"previous\"\n",
-    "    \n",
+    "    x = \"previous\"    \n",
     "    def inner():\n",
     "        nonlocal x\n",
     "        x = \"later\"\n",
-    "        print(\"inner:\", x)\n",
-    "    \n",
+    "        print(\"inner:\", x)    \n",
     "    inner()\n",
     "    print(\"outer:\", x)\n",
     "outer()"
