--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1102,14 +1102,12 @@
     }
    ],
    "source": [
-    "first_ten = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
-    "  \n",
+    "first_ten = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]  \n",
     "even = filter(lambda x:x%2==0, first_ten) \n",
     "print(type(even))  # it's 'filter' type, \n",
     "                   # in order to print the result,\n",
     "                   # we'd better convert it into the list type\n",
-    "\n",
-    "print('Even numbers are :', list(even))\n"
+    "print('Even numbers are :', list(even))"
    ]
   },
   {
