--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1347,7 +1347,7 @@
     "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
     "result_1 = ((lambda x : x[2])(list_1))\n",
     "result_2 = len(result_1)\n",
-    "print([result_1, result_2])\n"
+    "print([result_1, result_2])"
    ]
   },
   {
