--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1626,8 +1626,7 @@
     "if (year % 400 == 0) or (not year % 100 == 0 and year % 4 == 0):\n",
     "    print(f\"{year} is a leap year\")\n",
     "else :\n",
-    "    print(f\"{year} is not a leap year\") \n",
-    "\n"
+    "    print(f\"{year} is not a leap year\")"
    ]
   },
   {
