--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1705,8 +1705,7 @@
    "outputs": [],
    "source": [
     "# Palindrome Alfanumeric\n",
-    "def palindrome(x):\n",
-    "    "
+    "def palindrome(x):    "
    ]
   },
   {
