--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1754,7 +1754,7 @@
     "dict_1 = {}\n",
     "for i in list_1:\n",
     "    dict_1[i] = list_1.count(i)\n",
-    "print(dict_1)\n"
+    "print(dict_1)"
    ]
   },
   {
