--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1813,7 +1813,7 @@
     "            print(j, end=\"\\n\")\n",
     "        else:\n",
     "            print(j, end=\" \")\n",
-    "        count2 += 1\n"
+    "        count2 += 1"
    ]
   },
   {
