Sudoku Displayer Solution

--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1910,7 +1910,7 @@
     "    count1 +=1\n",
     "    if count1 == 9:\n",
     "        for x in range(16):\n",
-    "            print(\"-\", end=\" \")\n"
+    "            print(\"-\", end=\" \")"
    ]
   },
   {
