Type Error Sample

--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1986,7 +1986,7 @@
     "b = 5\n",
     "print('It is time for an error message :(')\n",
     "print(\"Sorry, but I won't be printed\")\n",
-    "print(a + b)  # it won't be printed\n"
+    "print(a + b)  # it won't be printed"
    ]
   },
   {
