--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -2044,7 +2044,7 @@
     "    for j in i:\n",
     "        for z in j:\n",
     "            a.append(z)\n",
-    "print(a)\n"
+    "print(a)"
    ]
   },
   {
