--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -2127,7 +2127,7 @@
     "print(next(a)) # next function iterated from generator object\n",
     "print(next(a))\n",
     "print(next(a))\n",
-    "print(next(a))\n"
+    "print(next(a))"
    ]
   },
   {
