--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -2193,8 +2193,7 @@
     "    # use the set function when n = 3\n",
     "    comb = list(set(temp))\n",
     "    c += 1\n",
-    "comb if n!=0 else [\"\"]\n",
-    "\n"
+    "comb if n!=0 else [\"\"]"
    ]
   },
   {
