--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -145,11 +145,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "def brothers(bro1, bro2, bro3):\n",
-    "    print('Here are the names of brothers :')\n",
-    "    print(bro1, bro2, bro3, sep='\\n')\n",
-    "    \n",
-    "family = ['tom', 'sue', 'tim']\n",
+    "def brothers(bro1, bro2, bro3):\r\n",
+    "    print('Here are the names of brothers :')\r\n",
+    "    print(bro1, bro2, bro3, sep='\\n')\r\n",
+    "    \r\n",
+    "family = ['tom', 'sue', 'tim']\r\n",
     "brothers(*family)"
    ],
    "outputs": [
@@ -170,11 +170,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "def gene(x, y):  # defined by positional args\n",
-    "    print(x, \"belongs to Generation X\")\n",
-    "    print(y, \"belongs to Generation Y\") \n",
-    "    \n",
-    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
+    "def gene(x, y):  # defined by positional args\r\n",
+    "    print(x, \"belongs to Generation X\")\r\n",
+    "    print(y, \"belongs to Generation Y\") \r\n",
+    "    \r\n",
+    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\r\n",
     "gene(**dict_gene)  # we call the function by a single argument(variable)"
    ],
    "outputs": [
@@ -193,11 +193,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "def gene(x, y):  # defined by positional args\n",
-    "    print(x, \"belongs to Generation X\")\n",
-    "    print(y, \"belongs to Generation Y\") \n",
-    "    \n",
-    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
+    "def gene(x, y):  # defined by positional args\r\n",
+    "    print(x, \"belongs to Generation X\")\r\n",
+    "    print(y, \"belongs to Generation Y\") \r\n",
+    "    \r\n",
+    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\r\n",
     "gene(**dict_gene)  # we call the function by a single argument(variable)"
    ],
    "outputs": [
@@ -216,11 +216,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "def gene(x='Solomon', y='David'):  # defined by kwargs (default values assigned to x and y)\n",
-    "    print(x, \"belongs to Generation X\")\n",
-    "    print(y, \"belongs to Generation Y\")\n",
-    "     \n",
-    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\n",
+    "def gene(x='Solomon', y='David'):  # defined by kwargs (default values assigned to x and y)\r\n",
+    "    print(x, \"belongs to Generation X\")\r\n",
+    "    print(y, \"belongs to Generation Y\")\r\n",
+    "     \r\n",
+    "dict_gene = {'y' : \"Marry\", 'x' : \"Fred\"}\r\n",
     "gene(**dict_gene) "
    ],
    "outputs": [
@@ -239,11 +239,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "# Triangle Hypotenuse\n",
-    "def my_function(a, b):\n",
-    "    hypotenuse = (a**2 + b**2)**0.5\n",
-    "    return(hypotenuse)\n",
-    "    \n",
+    "# Triangle Hypotenuse\r\n",
+    "def my_function(a, b):\r\n",
+    "    hypotenuse = (a**2 + b**2)**0.5\r\n",
+    "    return(hypotenuse)\r\n",
+    "    \r\n",
     "print(my_function(3,4))"
    ],
    "outputs": [
@@ -261,11 +261,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "# Rectagle Area\n",
-    "def my_function(a, b):\n",
-    "    area = a * b\n",
-    "    return(area)\n",
-    "    \n",
+    "# Rectagle Area\r\n",
+    "def my_function(a, b):\r\n",
+    "    area = a * b\r\n",
+    "    return(area)\r\n",
+    "    \r\n",
     "print(my_function(3, 4))"
    ],
    "outputs": [
@@ -283,12 +283,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "def longer(a, b):\n",
-    "    if len(a) >= len(b):\n",
-    "        return(a)\n",
-    "    else:\n",
-    "        return(b)\n",
-    "        \n",
+    "def longer(a, b):\r\n",
+    "    if len(a) >= len(b):\r\n",
+    "        return(a)\r\n",
+    "    else:\r\n",
+    "        return(b)\r\n",
+    "        \r\n",
     "print(longer('Richard', 'John'))"
    ],
    "outputs": [
@@ -306,11 +306,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "def my_function(): \n",
-    "    x = 10 # fix me!\n",
-    "    x += 5 \n",
-    "    print(x)\n",
-    "     \n",
+    "def my_function(): \r\n",
+    "    x = 10 # fix me!\r\n",
+    "    x += 5 \r\n",
+    "    print(x)\r\n",
+    "     \r\n",
     "my_function()"
    ],
    "outputs": [
@@ -328,7 +328,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "echo_word = ((lambda x: 'hello'*x)(3))\n",
+    "echo_word = ((lambda x: 'hello'*x)(3))\r\n",
     "print(echo_word)"
    ],
    "outputs": [
@@ -346,12 +346,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "count = 1\n",
-    "def counter():\n",
-    "    global count\n",
-    "    print(count)\n",
-    "    count += 1  \n",
-    "      \n",
+    "count = 1\r\n",
+    "def counter():\r\n",
+    "    global count\r\n",
+    "    print(count)\r\n",
+    "    count += 1  \r\n",
+    "      \r\n",
     "counter() "
    ],
    "outputs": [
@@ -367,13 +367,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "source": [
-    "count = 1\n",
-    "def counter():\n",
-    "    print(count)\n",
-    "    count += 1 \n",
-    "       \n",
+    "count = 1\r\n",
+    "def counter():\r\n",
+    "    print(count)\r\n",
+    "    count += 1        \r\n",
     "counter() "
    ],
    "outputs": [
@@ -384,8 +383,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-b36deac55cce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-13-b36deac55cce>\u001b[0m in \u001b[0;36mcounter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-1181a4c610f5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-1-1181a4c610f5>\u001b[0m in \u001b[0;36mcounter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'count' referenced before assignment"
      ]
     }
@@ -396,16 +395,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "count = 1\n",
-    "def print_global():\n",
-    "    print(count) \n",
-    "\n",
-    "print_global() \n",
-    "def counter():\n",
-    "    print(count)\n",
-    "    count += 1  # we're trying to change its value \n",
-    "    \n",
-    "print()  # just empty line\n",
+    "count = 1\r\n",
+    "def print_global():\r\n",
+    "    print(count) \r\n",
+    "\r\n",
+    "print_global() \r\n",
+    "def counter():\r\n",
+    "    print(count)\r\n",
+    "    count += 1  # we're trying to change its value \r\n",
+    "    \r\n",
+    "print()  # just empty line\r\n",
     "counter() "
    ],
    "outputs": [
